--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
   
   }
   .iicon{
-    color: #38acec !important;
+    color: #8C44F4 !important;
   }
   .navbar{
     background-color: #131313   !important;
@@ -25,7 +25,7 @@
   }
  .jost{
     font-family: "Jost", sans-serif !important;
-    color: #38acec;
+    color: #8C44F4;
    }
    .smallHeading{
     color: #ffffff;
@@ -56,7 +56,7 @@
       border-bottom: unset !important;
     }
     .nav-link.active {
-      color: #38acec !important;
+      color: #8C44F4 !important;
       border-bottom: unset !important;
     }
     .nav_right .nav_link_container {
@@ -135,7 +135,7 @@
     content: "";
     position: absolute;
     top: 10px;
-    border: 2px solid #38acec;
+    border: 2px solid #8C44F4;
     right: -4px;
     width: 10px;
     height: 10px;
@@ -148,12 +148,12 @@
     content: "";
     position: absolute;
     top: 10px;
-    border: 2px solid #38acec;
+    border: 2px solid #8C44F4;
     right: -4px;
     width: 10px;
     height: 10px;
     border-radius: 50%;
-    background-color: #38acec;
+    background-color: #8C44F4;
   }
   .navbar .contactBtn {
     font-weight: 600;
@@ -184,7 +184,7 @@
   }
 
 .svg-inline--fa.fa-xmark.fs-1{
-  color:  #38acec !important;
+  color:  #8C44F4 !important;
 }
 
  p, li{
@@ -217,8 +217,13 @@
 body{
   overflow-x: hidden !important;
   /* background-image: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%); */
+  /* background-image: radial-gradient(circle at center, rgba(2,0,36,1) 0%, #A082F2 1%, rgb(0, 0, 0) 100%); */
+  background-image: radial-gradient(circle at center, #A082F2 0%, rgba(2,0,36,1) 30%, rgb(0,0,0) 100%);
+
+  
+
   /* background-image: radial-gradient(circle, #202020  0%, #252525 100%); */
-  background-color: #202020;
+  /* background-color: #202020; */
   
  
 }
@@ -295,18 +300,18 @@ body{
 }
 
 .social-icons a:hover {
-  color: #38acec;
+  color: #8C44F4;
 }
 .fa-github:hover{
-  color: #38acec
+  color: #8C44F4
  !important;
 }
 .fa-linkedin-in:hover{
-  color: #38acec
+  color: #8C44F4
  !important;
 }
 .fa-instagram:hover{
-  color: #38acec
+  color: #8C44F4
  !important;
 }
 .name {
@@ -319,7 +324,7 @@ body{
 }
 
 .team-card:hover + .name {
-  color: #38acec;
+  color: #8C44F4;
 }
 
 
@@ -429,7 +434,7 @@ body{
   width: 50px;
   height: 5px;
   z-index: 1;
-  background-color: #38acec;
+  background-color: #8C44F4;
   border-radius: 10px;
 }
 .footerDiv-title::after {
@@ -440,7 +445,7 @@ body{
   width: 15px;
   height: 5px;
   z-index: 1;
-  background-color: #38acec;
+  background-color: #8C44F4;
   border-radius: 10px;
 }
 .Wexor_logo {
@@ -454,10 +459,10 @@ a{
   color: #dcdcdc;
 }
 li{
-  color: #38acec;
+  color: #8C44F4;
 }
 li a:hover{
-  color: #38acec;
+  color: #8C44F4;
 }
 
 
@@ -494,7 +499,7 @@ footer.footer::before {
   width: 50px;
   height: 50px;
   border-radius: 100%;
-  border: 2px solid #38acec;
+  border: 2px solid #8C44F4;
   transition: all 200ms ease-out;
   position: fixed;
   pointer-events: none;
@@ -509,7 +514,7 @@ footer.footer::before {
   width: 20px;
   height: 20px;
   border-radius: 100%;
-  background-color: #38acec;
+  background-color: #8C44F4;
   opacity: 0.3;
   position: fixed;
   transform: translate(-50%, -50%);
@@ -635,7 +640,7 @@ footer.footer::before {
   justify-content: center;
   align-items: center;
   height: 200px;
-  border: 2px solid #38acec;
+  border: 2px solid #8C44F4;
   background-color: #131313; /* Default background color */
   position: relative;
   overflow: hidden; /* To make sure the image stays within the box */
@@ -908,7 +913,7 @@ footer.footer::before {
   top: 0;
   height: 100%;
   width: 100%;
-  background-color: #38acec;
+  background-color: #8C44F4;
   -webkit-transform: scale(0);
   transform: scale(0);
   -webkit-transform-origin: right bottom;
@@ -925,7 +930,7 @@ footer.footer::before {
   top: 0;
   height: 100%;
   width: 100%;
-  background-color: #38acec;
+  background-color: #8C44F4;
   -webkit-transform: scale(0);
   transform: scale(0);
   -webkit-transform-origin: left bottom;
@@ -942,7 +947,7 @@ footer.footer::before {
   top: 0;
   height: 100%;
   width: 100%;
-  background-color: #38acec;
+  background-color: #8C44F4;
   -webkit-transform: scale(0);
   transform: scale(0);
   -webkit-transform-origin: right top;
@@ -959,7 +964,7 @@ footer.footer::before {
   top: 0;
   height: 100%;
   width: 100%;
-  background-color: #38acec;
+  background-color: #8C44F4;
   -webkit-transform: scale(0);
   transform: scale(0);
   -webkit-transform-origin: left top;
@@ -1009,7 +1014,7 @@ footer.footer::before {
   width: 50px;
   height: 5px;
   z-index: -1;
-  background-color: #38acec;
+  background-color: #8C44F4;
   border-radius: 10px;
 }
 
@@ -1024,7 +1029,7 @@ footer.footer::before {
   width: 15px;
   height: 5px;
   z-index: -1;
-  background-color: #38acec;
+  background-color: #8C44F4;
   border-radius: 10px;
 }
 
@@ -1075,10 +1080,10 @@ footer.footer::before {
 }
 .single-service-part-2-icon {
   margin-right: 10px;
-  color: #38acec;
+  color: #8C44F4;
 }
 .bigHeading{
-  color: #38acec;
+  color: #8C44F4;
 }
 
 
@@ -1102,54 +1107,54 @@ footer.footer::before {
   /* height: 300px; */
   justify-content: center;
   /* width: 150px; */
-  border: 2px solid  #38acec;
+  border: 2px solid  #8C44F4;
   padding: 20px;
 }
 /* carousel end */
 
 p::selection{
-  background-color: #38acec !important;
+  background-color: #8C44F4 !important;
   color: #ffffff !important;
 }
 h1::selection{
-  background-color: #38acec !important;
+  background-color: #8C44F4 !important;
   color: #ffffff !important;
 }
 span::selection{
-   background-color: #38acec !important;
+   background-color: #8C44F4 !important;
   color: #ffffff !important;
 
 }
 h2::selection{
-   background-color: #38acec !important;
+   background-color: #8C44F4 !important;
   color: #ffffff !important;
 }
 h5::selection{
-   background-color: #38acec !important;
+   background-color: #8C44F4 !important;
   color: #ffffff !important;
 }
 div::selection{
-   background-color: #38acec !important;
+   background-color: #8C44F4 !important;
   color: #ffffff !important;
 }
 h6::selection{
-   background-color: #38acec !important;
+   background-color: #8C44F4 !important;
   color: #ffffff !important;
 }
 h4::selection{
-   background-color: #38acec !important;
+   background-color: #8C44F4 !important;
   color: #ffffff !important;
 }
 a::selection{
-   background-color: #38acec !important;
+   background-color: #8C44F4 !important;
   color: #ffffff !important;
 }
 li::selection{
-   background-color: #38acec !important;
+   background-color: #8C44F4 !important;
   color: #ffffff !important;
 }
 h3::selection{
-   background-color: #38acec !important;
+   background-color: #8C44F4 !important;
   color: #ffffff !important;
 }
 /* our work start */
@@ -1182,7 +1187,7 @@ h3::selection{
         width: 100%;
         height: 100%;
         background: rgba(0, 0, 0, 0.6);
-        color: #38acec;
+        color: #8C44F4;
         opacity: 0;
         transition: opacity 0.4s ease;
         display: flex;
@@ -1197,7 +1202,7 @@ h3::selection{
       .image-card:hover .image-overlay {
         opacity: 9;
         background-color: #131313;
-        border: 2px solid #38acec;
+        border: 2px solid #8C44F4;
         
       }
 
@@ -1263,18 +1268,18 @@ h3::selection{
       width: 50px;
       height: 50px;
       border-radius: 50%;
-      background-color: #38acec;
+      background-color: #8C44F4;
       color: white;
       border: none;
       align-items: center;
       justify-content: center;
-      box-shadow: #38acec;
+      box-shadow: #8C44F4;
       z-index: 1000;
       transition: opacity 0.4s ease, background-color 0.3s ease;
       opacity: 0;
       pointer-events: none;
       display: flex;
-      border: 2px solid #38acec !important;
+      border: 2px solid #8C44F4 !important;
     }
 
     #goTopBtn.show {
@@ -1283,7 +1288,7 @@ h3::selection{
     }
 
     #goTopBtn:hover {
-      background-color: #38acec;
+      background-color: #8C44F4;
     }
 
     #goTopBtn i {
@@ -1310,7 +1315,7 @@ h3::selection{
   color: #dedede !important;
 }
 .contact-form {
-  background-color: #38acec;
+  background-color: #8C44F4;
   position: relative;
 }
 
@@ -1339,7 +1344,7 @@ h3::selection{
   position: absolute;
   width: 26px;
   height: 26px;
-  background-color: #38acec;
+  background-color: #8C44F4;
   transform: rotate(45deg);
   top: 50px;
   left: -13px;
@@ -1446,7 +1451,7 @@ textarea.input {
   opacity: 0;
   transition: 0.3s;
   height: 5px;
-  background-color: #38acec;
+  background-color: #8C44F4;
   top: 50%;
   transform: translateY(-50%);
 }
@@ -1537,7 +1542,7 @@ textarea.input {
   position: absolute;
   width: 110px;
   height: 100px;
-  border: 22px solid #38acec;
+  border: 22px solid #8C44F4;
   border-radius: 50%;
   bottom: -47px;
   right: 50px;
@@ -1641,7 +1646,7 @@ textarea.input {
 
 /* contact us */
 .iii{
-    border: 3px solid #38acec;
+    border: 3px solid #8C44F4;
     padding: 12px;
     border-radius: 50%;
     font-size: 16px;
@@ -1650,13 +1655,13 @@ textarea.input {
 
     }
   .ogange{
-    color: #38acec !important;
+    color: #8C44F4 !important;
     font-size: 25px;
     font-weight: 600;
   }
  h6:hover .iii{
    color: rgb(0, 0, 0) !important;
-  background-color: #38acec;
+  background-color: #8C44F4;
   transition: ease 0.5s;
  }
 .nav-link{
@@ -1667,7 +1672,7 @@ textarea.input {
 }
 .lets{
    font-family: "Lexend", sans-serif !important;
-   color: #38acec;
+   color: #8C44F4;
 }
 .reach{
    font-family: "Lexend", sans-serif !important;
@@ -1677,7 +1682,7 @@ textarea.input {
   font-optical-sizing: auto;
   font-weight: 500;
   font-style: normal;
-  color: #38acec;
+  color: #8C44F4;
 }
 .text-justify{
   text-align: justify;
@@ -1697,7 +1702,7 @@ textarea.input {
   color: #ffffff !important;
 }
 .breadcrumb_active{
-  color: #38acec;
+  color: #8C44F4;
 }
 .breadcrumb-item a:hover{
   color: #dcdcdc;
@@ -1711,7 +1716,7 @@ textarea.input {
  left: -100px; /* Start off-screen */
   width: 100px;
   height: 100%;
-  background-color: #38acec7e;
+  background-color: #8C44F47e;
   clip-path: path("M0,10 C90,30 60,60 0,100 L0,10 Z");
   animation: slideInLeft 1s ease-out forwards;
 }
@@ -1725,10 +1730,10 @@ textarea.input {
   
   width: 100px;
   height: 100%;
-  background-color: #38acec7e;
+  background-color: #8C44F47e;
   clip-path: path("M100,0 C10,90 5,110 100,200 L100,0 Z");
    animation: slideInRight 1s ease-out forwards;
-  animation-delay: 0.2s; /* Slight delay for stagge#38acec
+  animation-delay: 0.2s; /* Slight delay for stagge#8C44F4
  effect */
 }
 @keyframes slideInLeft {
@@ -1826,7 +1831,7 @@ textarea.input {
 }
 
 .aboutUsIconBox {
-  background-color: #38acec;
+  background-color: #8C44F4;
 }
 .aboutUsIconBox img {
   width: 75px;
@@ -1884,7 +1889,7 @@ textarea.input {
   top: -5px;
   left: -10px;
   border-radius: 50%;
-  background: #38acec;
+  background: #8C44F4;
   z-index: -1;
   opacity: 0.7;
 }
@@ -1895,7 +1900,7 @@ textarea.input {
   height: 18px;
 }
 .aboutUsInformationProgressBar {
-  background-color: #38acec !important;
+  background-color: #8C44F4 !important;
 }
 
 .timeline-with-icons {
@@ -1918,8 +1923,8 @@ textarea.input {
   position: absolute;
   left: -48px;
   background-color: transparent;
-  border: 2px solid #38acec;
-  color: #38acec !important;
+  border: 2px solid #8C44F4;
+  color: #8C44F4 !important;
   border-radius: 50%;
   height: 31px;
   width: 31px;
