--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
   
   }
   .iicon{
-    color: #00A1F8 !important;
+    color: #FF4500 !important;
   }
   .navbar{
     background-color: #131313   !important;
@@ -25,7 +25,7 @@
   }
  .jost{
     font-family: "Jost", sans-serif !important;
-    color: #00A1F8;
+    color: #FF4500;
    }
    .smallHeading{
     color: #ffffff;
@@ -56,7 +56,7 @@
       border-bottom: unset !important;
     }
     .nav-link.active {
-      color: #00A1F8 !important;
+      color: #FF4500 !important;
       border-bottom: unset !important;
     }
     .nav_right .nav_link_container {
@@ -135,7 +135,7 @@
     content: "";
     position: absolute;
     top: 10px;
-    border: 2px solid #00A1F8;
+    border: 2px solid #FF4500;
     right: -4px;
     width: 10px;
     height: 10px;
@@ -148,12 +148,12 @@
     content: "";
     position: absolute;
     top: 10px;
-    border: 2px solid #00A1F8;
+    border: 2px solid #FF4500;
     right: -4px;
     width: 10px;
     height: 10px;
     border-radius: 50%;
-    background-color: #00A1F8;
+    background-color: #FF4500;
   }
   .navbar .contactBtn {
     font-weight: 600;
@@ -184,7 +184,7 @@
   }
 
 .svg-inline--fa.fa-xmark.fs-1{
-  color:  #00A1F8 !important;
+  color:  #FF4500 !important;
 }
 
  p, li{
@@ -223,7 +223,12 @@ body{
   
 
   /* background-image: radial-gradient(circle, #202020  0%, #252525 100%); */
-  background-color: #202020;
+  /* background-color: #202020; */
+  background: #0738B0;
+background: radial-gradient(circle, rgba(7, 56, 176, 1) 0%, rgba(0, 0, 0, 1) 100%);
+ background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
   
  
 }
@@ -300,18 +305,18 @@ body{
 }
 
 .social-icons a:hover {
-  color: #00A1F8;
+  color: #FF4500;
 }
 .fa-github:hover{
-  color: #00A1F8
+  color: #FF4500
  !important;
 }
 .fa-linkedin-in:hover{
-  color: #00A1F8
+  color: #FF4500
  !important;
 }
 .fa-instagram:hover{
-  color: #00A1F8
+  color: #FF4500
  !important;
 }
 .name {
@@ -324,7 +329,7 @@ body{
 }
 
 .team-card:hover + .name {
-  color: #00A1F8;
+  color: #FF4500;
 }
 
 
@@ -434,7 +439,7 @@ body{
   width: 50px;
   height: 5px;
   z-index: 1;
-  background-color: #00A1F8;
+  background-color: #FF4500;
   border-radius: 10px;
 }
 .footerDiv-title::after {
@@ -445,7 +450,7 @@ body{
   width: 15px;
   height: 5px;
   z-index: 1;
-  background-color: #00A1F8;
+  background-color: #FF4500;
   border-radius: 10px;
 }
 .Wexor_logo {
@@ -459,10 +464,10 @@ a{
   color: #dcdcdc;
 }
 li{
-  color: #00A1F8;
+  color: #FF4500;
 }
 li a:hover{
-  color: #00A1F8;
+  color: #FF4500;
 }
 
 
@@ -499,7 +504,7 @@ footer.footer::before {
   width: 50px;
   height: 50px;
   border-radius: 100%;
-  border: 2px solid #00A1F8;
+  border: 2px solid #FF4500;
   transition: all 200ms ease-out;
   position: fixed;
   pointer-events: none;
@@ -514,7 +519,7 @@ footer.footer::before {
   width: 20px;
   height: 20px;
   border-radius: 100%;
-  background-color: #00A1F8;
+  background-color: #FF4500;
   opacity: 0.3;
   position: fixed;
   transform: translate(-50%, -50%);
@@ -640,7 +645,7 @@ footer.footer::before {
   justify-content: center;
   align-items: center;
   height: 200px;
-  border: 2px solid #00A1F8;
+  border: 2px solid #FF4500;
   background-color: #131313; /* Default background color */
   position: relative;
   overflow: hidden; /* To make sure the image stays within the box */
@@ -913,7 +918,7 @@ footer.footer::before {
   top: 0;
   height: 100%;
   width: 100%;
-  background-color: #00A1F8;
+  background-color: #FF4500;
   -webkit-transform: scale(0);
   transform: scale(0);
   -webkit-transform-origin: right bottom;
@@ -930,7 +935,7 @@ footer.footer::before {
   top: 0;
   height: 100%;
   width: 100%;
-  background-color: #00A1F8;
+  background-color: #FF4500;
   -webkit-transform: scale(0);
   transform: scale(0);
   -webkit-transform-origin: left bottom;
@@ -947,7 +952,7 @@ footer.footer::before {
   top: 0;
   height: 100%;
   width: 100%;
-  background-color: #00A1F8;
+  background-color: #FF4500;
   -webkit-transform: scale(0);
   transform: scale(0);
   -webkit-transform-origin: right top;
@@ -964,7 +969,7 @@ footer.footer::before {
   top: 0;
   height: 100%;
   width: 100%;
-  background-color: #00A1F8;
+  background-color: #FF4500;
   -webkit-transform: scale(0);
   transform: scale(0);
   -webkit-transform-origin: left top;
@@ -1014,7 +1019,7 @@ footer.footer::before {
   width: 50px;
   height: 5px;
   z-index: -1;
-  background-color: #00A1F8;
+  background-color: #FF4500;
   border-radius: 10px;
 }
 
@@ -1029,7 +1034,7 @@ footer.footer::before {
   width: 15px;
   height: 5px;
   z-index: -1;
-  background-color: #00A1F8;
+  background-color: #FF4500;
   border-radius: 10px;
 }
 
@@ -1080,10 +1085,10 @@ footer.footer::before {
 }
 .single-service-part-2-icon {
   margin-right: 10px;
-  color: #00A1F8;
+  color: #FF4500;
 }
 .bigHeading{
-  color: #00A1F8;
+  color: #FF4500;
 }
 
 
@@ -1107,54 +1112,54 @@ footer.footer::before {
   /* height: 300px; */
   justify-content: center;
   /* width: 150px; */
-  border: 2px solid  #00A1F8;
+  border: 2px solid  #FF4500;
   padding: 20px;
 }
 /* carousel end */
 
 p::selection{
-  background-color: #00A1F8 !important;
+  background-color: #FF4500 !important;
   color: #ffffff !important;
 }
 h1::selection{
-  background-color: #00A1F8 !important;
+  background-color: #FF4500 !important;
   color: #ffffff !important;
 }
 span::selection{
-   background-color: #00A1F8 !important;
+   background-color: #FF4500 !important;
   color: #ffffff !important;
 
 }
 h2::selection{
-   background-color: #00A1F8 !important;
+   background-color: #FF4500 !important;
   color: #ffffff !important;
 }
 h5::selection{
-   background-color: #00A1F8 !important;
+   background-color: #FF4500 !important;
   color: #ffffff !important;
 }
 div::selection{
-   background-color: #00A1F8 !important;
+   background-color: #FF4500 !important;
   color: #ffffff !important;
 }
 h6::selection{
-   background-color: #00A1F8 !important;
+   background-color: #FF4500 !important;
   color: #ffffff !important;
 }
 h4::selection{
-   background-color: #00A1F8 !important;
+   background-color: #FF4500 !important;
   color: #ffffff !important;
 }
 a::selection{
-   background-color: #00A1F8 !important;
+   background-color: #FF4500 !important;
   color: #ffffff !important;
 }
 li::selection{
-   background-color: #00A1F8 !important;
+   background-color: #FF4500 !important;
   color: #ffffff !important;
 }
 h3::selection{
-   background-color: #00A1F8 !important;
+   background-color: #FF4500 !important;
   color: #ffffff !important;
 }
 /* our work start */
@@ -1187,7 +1192,7 @@ h3::selection{
         width: 100%;
         height: 100%;
         background: rgba(0, 0, 0, 0.6);
-        color: #00A1F8;
+        color: #FF4500;
         opacity: 0;
         transition: opacity 0.4s ease;
         display: flex;
@@ -1202,7 +1207,7 @@ h3::selection{
       .image-card:hover .image-overlay {
         opacity: 9;
         background-color: #131313;
-        border: 2px solid #00A1F8;
+        border: 2px solid #FF4500;
         
       }
 
@@ -1268,18 +1273,18 @@ h3::selection{
       width: 50px;
       height: 50px;
       border-radius: 50%;
-      background-color: #00A1F8;
+      background-color: #FF4500;
       color: white;
       border: none;
       align-items: center;
       justify-content: center;
-      box-shadow: #00A1F8;
+      box-shadow: #FF4500;
       z-index: 1000;
       transition: opacity 0.4s ease, background-color 0.3s ease;
       opacity: 0;
       pointer-events: none;
       display: flex;
-      border: 2px solid #00A1F8 !important;
+      border: 2px solid #FF4500 !important;
     }
 
     #goTopBtn.show {
@@ -1288,7 +1293,7 @@ h3::selection{
     }
 
     #goTopBtn:hover {
-      background-color: #00A1F8;
+      background-color: #FF4500;
     }
 
     #goTopBtn i {
@@ -1315,7 +1320,7 @@ h3::selection{
   color: #dedede !important;
 }
 .contact-form {
-  background-color: #00A1F8;
+  background-color: #FF4500;
   position: relative;
 }
 
@@ -1344,7 +1349,7 @@ h3::selection{
   position: absolute;
   width: 26px;
   height: 26px;
-  background-color: #00A1F8;
+  background-color: #FF4500;
   transform: rotate(45deg);
   top: 50px;
   left: -13px;
@@ -1451,7 +1456,7 @@ textarea.input {
   opacity: 0;
   transition: 0.3s;
   height: 5px;
-  background-color: #00A1F8;
+  background-color: #FF4500;
   top: 50%;
   transform: translateY(-50%);
 }
@@ -1542,7 +1547,7 @@ textarea.input {
   position: absolute;
   width: 110px;
   height: 100px;
-  border: 22px solid #00A1F8;
+  border: 22px solid #FF4500;
   border-radius: 50%;
   bottom: -47px;
   right: 50px;
@@ -1646,7 +1651,7 @@ textarea.input {
 
 /* contact us */
 .iii{
-    border: 3px solid #00A1F8;
+    border: 3px solid #FF4500;
     padding: 12px;
     border-radius: 50%;
     font-size: 16px;
@@ -1655,13 +1660,13 @@ textarea.input {
 
     }
   .ogange{
-    color: #00A1F8 !important;
+    color: #FF4500 !important;
     font-size: 25px;
     font-weight: 600;
   }
  h6:hover .iii{
    color: rgb(0, 0, 0) !important;
-  background-color: #00A1F8;
+  background-color: #FF4500;
   transition: ease 0.5s;
  }
 .nav-link{
@@ -1672,7 +1677,7 @@ textarea.input {
 }
 .lets{
    font-family: "Lexend", sans-serif !important;
-   color: #00A1F8;
+   color: #FF4500;
 }
 .reach{
    font-family: "Lexend", sans-serif !important;
@@ -1682,7 +1687,7 @@ textarea.input {
   font-optical-sizing: auto;
   font-weight: 500;
   font-style: normal;
-  color: #00A1F8;
+  color: #FF4500;
 }
 .text-justify{
   text-align: justify;
@@ -1702,7 +1707,7 @@ textarea.input {
   color: #ffffff !important;
 }
 .breadcrumb_active{
-  color: #00A1F8;
+  color: #FF4500;
 }
 .breadcrumb-item a:hover{
   color: #dcdcdc;
@@ -1716,7 +1721,7 @@ textarea.input {
  left: -100px; /* Start off-screen */
   width: 100px;
   height: 100%;
-  background-color: #00A1F87e;
+  background-color: #FF45007e;
   clip-path: path("M0,10 C90,30 60,60 0,100 L0,10 Z");
   animation: slideInLeft 1s ease-out forwards;
 }
@@ -1730,10 +1735,10 @@ textarea.input {
   
   width: 100px;
   height: 100%;
-  background-color: #00A1F87e;
+  background-color: #FF45007e;
   clip-path: path("M100,0 C10,90 5,110 100,200 L100,0 Z");
    animation: slideInRight 1s ease-out forwards;
-  animation-delay: 0.2s; /* Slight delay for stagge#00A1F8
+  animation-delay: 0.2s; /* Slight delay for stagge#FF4500
  effect */
 }
 @keyframes slideInLeft {
@@ -1831,7 +1836,7 @@ textarea.input {
 }
 
 .aboutUsIconBox {
-  background-color: #00A1F8;
+  background-color: #FF4500;
 }
 .aboutUsIconBox img {
   width: 75px;
@@ -1889,7 +1894,7 @@ textarea.input {
   top: -5px;
   left: -10px;
   border-radius: 50%;
-  background: #00A1F8;
+  background: #FF4500;
   z-index: -1;
   opacity: 0.7;
 }
@@ -1900,7 +1905,7 @@ textarea.input {
   height: 18px;
 }
 .aboutUsInformationProgressBar {
-  background-color: #00A1F8 !important;
+  background-color: #FF4500 !important;
 }
 
 .timeline-with-icons {
@@ -1923,8 +1928,8 @@ textarea.input {
   position: absolute;
   left: -48px;
   background-color: transparent;
-  border: 2px solid #00A1F8;
-  color: #00A1F8 !important;
+  border: 2px solid #FF4500;
+  color: #FF4500 !important;
   border-radius: 50%;
   height: 31px;
   width: 31px;
